# qBandas

./: .gitignore  LICENSE  README.md  parsers.py  pyproject.toml  qBandas.py  qb_parsers.py  requirements.txt  schema.json  setup.py  tests.py
qbandas/: __init__.py  __main__.py  _constants.py  _pack.py  config.py  headers.py  pack.py  parsers.py  profiles.py  records.py  schema.py  schemas.py  test_headers.py  upload.py  util.py
qbandas/data/: address-fields.json  config.ini  field_types.json
qbandas/profiles/: __init__.py  profiles.py
qbandas/records/: __init__.py  _pack.py  records.py
qbandas/schemas/: __init__.py  schemas.py
scripts/: build.bat  doc-build.bat
src/qbandas/: __init__.py  __main__.py  config.py  headers.py  pack.py  parsers.py  schema.py  upload.py  util.py
src/qbandas/data/: field_types.json
test/: data.csv  schema.json  test.py  test__pack.py  test_headers.py  test_profiles.py  test_qbandas.py  test_records.py  test_schemas.py
test/schemas/: Example Table.json  bs397hfuy.json
