[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "qbandas"
version = "1.2.0"
authors = [
  { name = "Joshua Hopwood" },
]
description = "Integrates the popular data handling library Pandas and the QuickBase API"
dependencies = [
  "pandas==1.4.3",
  "requests==2.28.1"
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://pypi.org/project/qbandas/"
repository = "https://github.com/jhopwood-jjk/qBandas"
documentation = "https://jhopwood-jjk.github.io/qbandas/index.html"